bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `[u8; 8]: bitfield::checks::DiscriminantInRange` is not satisfied
 --> tests/09-variant-out-of-range.rs:8:10
  |
8 | #[derive(BitfieldSpecifier)]
  |          ^^^^^^^^^^^^^^^^^ the trait `bitfield::checks::DiscriminantInRange` is not implemented for `[u8; 8]`
  |
  = help: the trait `bitfield::checks::DiscriminantInRange` is implemented for `[u8; 0]`
note: required by a bound in `CheckDiscriminantInRange`
 --> src/lib.rs
  |
  | pub struct CheckDiscriminantInRange<T: checks::DiscriminantInRange> {
  |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckDiscriminantInRange`
  = note: this error originates in the derive macro `BitfieldSpecifier` (in Nightly builds, run with -Z macro-backtrace for more info)
